# sgpo_editor

./: .coverage  .env  .flake8  .gitignore  .ruff.toml  .windsurfrules  AGENTS.md  README.md  ToDo.md  conftest.py  convert_prof.py  debug_test.py  debug_test_error.py  fix_mouse_drag.py  mypy.ini  profile.txt  profile_entry_model.py  profile_entry_operations.py  profile_entry_selection.py  pyproject.toml  pytest.ini  repomix.config.json  run.py  run_all_tests.py  run_pytest.py  run_specific_test.py  run_test.py  run_test_manually.py  run_test_with_traceback.py  run_tests.py  windsurf_monitor.sh
.cursor/rules/: ProjectRule.mdc  db-interface.mdc  debug.mdc  gui.mdc  linter-error-python.mdc  py_test.mdc  python-project-management.mdc  shortcut.mdc  use-git-commands.mdc
_doc/: .repomixignore  0_requirements_specification.md  1_system_overview.md  2_2_dbcash_architecture.md  2_architecture_design.md  3_data_model_design.md  4_ui_component_design.md  5_test_plan.md  6_glossary.md  Test_ToDo.md  architecture.md  codebase_overview.md  context_summary.md  edit_behavior.md  facade_pattern.md  gui_components_specification.md  modules.md  nuitka-build-guide.md  repomix.config.json  test_documentation.md  test_guideline.md  todo.md  todo1.md  updated_filtering_logic.md
_doc/.obsidian/: workspace.json
_doc/memo/: po_format_window 適用ボタン.md
_doc/performance/: entry_operations_profiling.md  profile_entry_model_results.md
docs/: nuitka-build-guide.md
po_viewer/: cli.py  po.py
po_viewer/core/: viewer_po_file.py
po_viewer/gui/: main_window.py
po_viewer/sgpo/: __init__.pyi  core.pyi
profile_results/: entry_selection_profile.txt  entry_selection_profile_with_cache.txt
sample_data/: sample.po  sample_10000.po
sgpo_editor/: __init__.py  __main__.py  build.py
sgpo_editor/core/: __init__.py  viewer_po_file.py
sgpo_editor/gui/: __init__.py  event_handler.py  file_handler.py  main_window.py  table_manager.py  ui_setup.py
sgpo_editor/models/: database.py
sgpo_editor/sgpo/: __init__.py  po_entry.py
sgpo_editor/types/: po_entry.py
src/: profile_pydantic_v2_compare.py
src/demo_widget/: entry_editor_demo.py  run_demo.py
src/performance_profiles_v2_compare/: pydantic_v2_compare_10000_entries.prof
src/sgpo/: __init__.py  core.py  core.pyi  duplicate_checker.py
src/sgpo_editor/: AGENTS.md  __init__.py  __init__.pyi  __main__.py  cli.py  config.py  po.py  types.py
tests/: all_main_window_suite.py  base_test_helpers.py  conftest.py  mock_helpers.py  test_all_main_window.py  test_base.py  test_database_partial_update.py  test_database_review_features.py  test_debug.py  test_debug_window.py  test_duplicate_checker.py  test_entry_editor_update_behavior.py  test_entry_list_events.py  test_entry_list_filter.py  test_entry_list_integration.py  test_entry_list_selection.py  test_entry_list_sort.py  test_entry_metadata.py  test_entry_model.py  test_entry_model.py.bak  test_entry_model_evaluation.py  test_entry_review_data.py  test_entry_status.py  test_entry_structure.py  test_evaluation_state.py  test_keyword_filter.py  test_main_window.py  test_main_window_basic.py  test_main_window_column_visibility.py  test_main_window_entry.py  test_main_window_error.py  test_main_window_keyboard.py  test_main_window_keyword_filter.py  test_main_window_layout.py  test_main_window_search.py  test_main_window_sort_filter.py  test_main_window_state.py  test_main_window_table.py  test_models.py  test_po_format_editor.py  (+13 more)
tests/core/: test_cache_manager.py  test_database_accessor.py
tests/database/: test_database_partial_update.py  test_database_review_features.py
tests/gui/: test_translation_evaluation.py
tests/integration/: test_cache_invalidation.py  test_cli.py  test_sgpo.py  test_viewer_po_file.py  test_viewer_po_file_filtered_entries.py  test_viewer_po_file_refactored.py  test_viewer_po_file_stats.py
tests/models/: test_models.py
tests/test_entry_editor/: test_entry_editor.py  test_entry_editor_events.py  test_entry_editor_state.py
tests/test_keyword_filter/: test_database_keyword_handling.py  test_filter_debug.py  test_filter_reset.py  test_filter_reset_advanced.py  (+3 more)
(+147 files in other folders)
