[project]
name = "sgpo_editor"
version = "0.1.0"
description = "A tool for viewing and checking PO (gettext) files"
requires-python = ">=3.8"
dependencies = [
    "polib", # POファイルの解析用
    "rich", # ターミナルでの表示を改善
    "typer", # CLIインターフェース用
    "PySide6>=6.6.0", # GUIインターフェース用
    "pydantic>=2.10.6",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
po_editor-cli = "sgpo_editor.cli:app"
po_editor = "sgpo_editor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "src"]
addopts = "--cov=sgpo_editor --cov-report=term-missing"
