[project]
name = "sgpo_editor"
version = "0.1.0"
description = "A tool for viewing and checking PO (gettext) files"
requires-python = ">=3.8"
dependencies = [
    "polib", # POファイルの解析用
    "rich", # ターミナルでの表示を改善
    "typer", # CLIインターフェース用
    "PySide6>=6.6.0", # GUIインターフェース用
    "pydantic>=2.10.6",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pycodestyle>=2.12.1",
    "autopep8>=2.3.1",
    "ruff>=0.9.10",
    "openai>=1.10.0", # OpenAI APIクライアント
    "anthropic>=0.15.0", # Claude APIクライアント
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
py-modules = ["src"]

[tool.setuptools.packages.find]
where = ["src/"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
po_editor-cli = "sgpo_editor.cli:app"
po_editor = "sgpo_editor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = ["--cov=sgpo_editor", "--cov-report=term-missing", "--import-mode=importlib"]
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=sgpo_editor {args:tests}"
